# TrandeAgent

./: .gitignore  pyproject.toml
config/: arena.yaml  data.yaml  feishu.yaml  mind_models.yaml  scheduler.yaml  screener.yaml  signals.yaml  strategy_prototypes.yaml
config/feishu_base_schemas/: arena.yaml  fund_pool.yaml  review.yaml  signals.yaml
docs/: adr.md  context.md  frontend-design.md  prd.md  research.md  step6-feishu-cli-verification.md
frontend/: .env.production  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: helpers.tsx
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/types/: api.ts
scripts/: gen_openapi_types.sh  install_launchd.sh  serve.sh  smoke_test_data.py
specs/001-data-provider/: plan.md  spec.md  tasks.md
specs/002-feishu-io/: plan.md  spec.md  tasks.md
specs/003-scheduler/: plan.md  spec.md  tasks.md
specs/004-indicators/: plan.md  spec.md  tasks.md
specs/005-fund-screener/: plan.md  spec.md  tasks.md
specs/006-fund-analyzer/: plan.md  spec.md  tasks.md
specs/007-signal-engine/: plan.md  spec.md  tasks.md
specs/008-strategy-arena/: plan.md  spec.md  tasks.md
specs/009-config-manager/: plan.md  spec.md  tasks.md
specs/010-mac-frontend/: plan.md  spec.md  tasks.md
specs/011-api-backend/: plan.md  spec.md  tasks.md
src/: __init__.py  main.py
src/analyzer/: __init__.py  __main__.py  analyzer.py  config.py  models.py  renderer.py  validator.py
src/api/: __main__.py  app.py  deps.py  schema.py  timeout.py
src/arena/: __init__.py  __main__.py  cross_validator.py  deduplicator.py  forward.py  generator.py  models.py  pipeline.py  ranker.py
src/config_manager/: __init__.py  __main__.py  example.py  impact.py  loader.py  manager.py  schema.py  validator.py  version.py
src/data/: __init__.py  __main__.py  akshare_provider.py  cache.py  config.py  freshness.py  provider.py  rate_limit.py  retry.py
src/feishu/: __init__.py  __main__.py  base_schema.py  cards.py  client.py  config.py  error_codes.py  lark_cli_client.py
src/indicators/: __init__.py  cache.py  default_engine.py  engine.py  l1_basic.py  l2_performance.py  l3_style.py  l4_cashflow.py  models.py  rating.py
src/scheduler/: __init__.py  __main__.py  config.py  holiday.py  launchd_scheduler.py  scheduler.py  state.py
src/screener/: __init__.py  __main__.py  engine.py  models.py  presets.py  rules.py  scorer.py
src/signal/: __init__.py  __main__.py  engine.py  fund_specific.py  fundamental.py  (+3 more)
tests/: test_main.py
(+166 files in other folders)
