[project]
name = "trandeagent"
version = "0.1.0"
description = "基金投资助手 - 连接飞书的智能基金分析与策略竞技场"
requires-python = ">=3.11"
dependencies = [
    "akshare>=1.14",
    "pandas>=2.2",
    "pyarrow>=15",
    "tenacity>=8.0",
    "loguru>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[project.scripts]
trandeagent-data = "src.data.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
    "slow: 标记较慢的测试",
    "integration: 集成测试（需要 mock 上游）",
    "smoke: 真实网络烟雾测试（手动触发）",
]

[tool.coverage.run]
source = ["src/data"]
omit = ["*/__main__.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
